# RustShot

./: Cargo.toml  README.md
data/: sample-config.toml
data/systemd/: rustshot.service
src/: cli.rs  client.rs  config.rs  daemon.rs  error.rs  main.rs
src/canvas/: geometry.rs  mod.rs  render.rs
src/capture/: mod.rs  x11.rs
src/dbus/: mod.rs
src/export/: clipboard.rs  file.rs
src/tray/: mod.rs  sni.rs  xembed.rs
src/ui/: mod.rs  overlay.rs  toolbar.rs
src/ui/overlay/: convert.rs  draft.rs  mod.rs  paint.rs  preview.rs  selection.rs  state.rs  tool_buttons.rs  x11_win.rs
