[package]
name = "rustshot"
version = "0.1.0"
edition = "2021"
description = "Fast Rust port of Flameshot for Linux + X11 (i3-friendly)"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossbeam-channel = "0.5"

zbus = { version = "4", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time"] }

x11rb = { version = "0.13", features = ["randr", "xfixes"] }
image = { version = "0.25", default-features = false, features = ["png"] }
arboard = "3"
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow", "x11"] }
tiny-skia = "0.11"
imageproc = "0.25"
ab_glyph = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
